test/reject/sweep_duplicate_tine.rk
rake duplicate_tine(values: f32s) -> f32s:
  tine #active when values >= <0.0>

  through #active else <0.0> into active_value:
    values

  return sweep:
    | #active => active_value
    | #active => values
    | _       => <0.0>
